@@ -918,63 +918,65 @@ BEGIN
     PUSHBUTTON      "<",MEMW_EXPANDCOLLAPSE,1,259,11,10
 END
 
-DEBUGGER DIALOGEX 54, 74, 542, 305
+DEBUGGER DIALOGEX 54, 74, 542, 321
 STYLE DS_SETFONT | DS_3DLOOK | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "6502 Debugger"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    EDITTEXT        IDC_DEBUGGER_DISASSEMBLY,15,6,318,289,ES_MULTILINE | ES_READONLY | WS_HSCROLL
-    SCROLLBAR       IDC_DEBUGGER_DISASSEMBLY_VSCR,336,6,8,288,SBS_VERT
-    GROUPBOX        "Status Flags",401,430,138,104,38,WS_TABSTOP
-    CONTROL         "N",IDC_DEBUGGER_FLAG_N,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,435,150,22,12
-    CONTROL         "V",IDC_DEBUGGER_FLAG_V,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,460,150,22,12
-    CONTROL         "U",IDC_DEBUGGER_FLAG_U,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,485,150,22,12
-    CONTROL         "B",IDC_DEBUGGER_FLAG_B,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,510,150,22,12
-    CONTROL         "D",IDC_DEBUGGER_FLAG_D,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,435,161,22,12
-    CONTROL         "I",IDC_DEBUGGER_FLAG_I,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,460,161,22,12
-    CONTROL         "Z",IDC_DEBUGGER_FLAG_Z,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,485,161,22,12
-    CONTROL         "C",IDC_DEBUGGER_FLAG_C,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,510,161,22,12
-    GROUPBOX        "BreakPoints",402,430,3,104,132,WS_TABSTOP
-    LISTBOX         IDC_DEBUGGER_BP_LIST,437,16,90,74,LBS_SORT | LBS_DISABLENOSCROLL | WS_VSCROLL
-    PUSHBUTTON      "Add...",IDC_DEBUGGER_BP_ADD,437,97,30,15
-    PUSHBUTTON      "Delete",IDC_DEBUGGER_BP_DEL,469,97,30,15,WS_DISABLED
-    PUSHBUTTON      "Edit",IDC_DEBUGGER_BP_EDIT,501,97,26,15,WS_DISABLED
+    EDITTEXT        IDC_DEBUGGER_DISASSEMBLY,15,6,318,300,ES_MULTILINE | ES_READONLY | WS_HSCROLL
+    SCROLLBAR       IDC_DEBUGGER_DISASSEMBLY_VSCR,336,6,8,300,SBS_VERT
+    GROUPBOX        "Status Flags",401,430,151,104,38,WS_TABSTOP
+    CONTROL         "N",IDC_DEBUGGER_FLAG_N,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,435,163,22,12
+    CONTROL         "V",IDC_DEBUGGER_FLAG_V,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,460,163,22,12
+    CONTROL         "U",IDC_DEBUGGER_FLAG_U,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,485,163,22,12
+    CONTROL         "B",IDC_DEBUGGER_FLAG_B,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,510,163,22,12
+    CONTROL         "D",IDC_DEBUGGER_FLAG_D,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,435,174,22,12
+    CONTROL         "I",IDC_DEBUGGER_FLAG_I,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,460,174,22,12
+    CONTROL         "Z",IDC_DEBUGGER_FLAG_Z,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,485,174,22,12
+    CONTROL         "C",IDC_DEBUGGER_FLAG_C,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,510,174,22,12
+    GROUPBOX        "BreakPoints",402,430,3,104,143,WS_TABSTOP
+    LISTBOX         IDC_DEBUGGER_BP_LIST,437,16,90,91,LBS_SORT | LBS_DISABLENOSCROLL | WS_VSCROLL
+    PUSHBUTTON      "Add...",IDC_DEBUGGER_BP_ADD,437,111,30,15
+    PUSHBUTTON      "Delete",IDC_DEBUGGER_BP_DEL,469,111,30,15,WS_DISABLED
+    PUSHBUTTON      "Edit",IDC_DEBUGGER_BP_EDIT,501,111,26,15,WS_DISABLED
     PUSHBUTTON      "Run",IDC_DEBUGGER_RUN,349,7,37,14
     PUSHBUTTON      "Step Into",IDC_DEBUGGER_STEP_IN,389,7,38,14
     PUSHBUTTON      "Step Out",IDC_DEBUGGER_STEP_OUT,349,23,37,14
     PUSHBUTTON      "Step Over",IDC_DEBUGGER_STEP_OVER,389,23,38,14
-    LTEXT           "A:",IDC_STATIC,349,83,10,8
-    LTEXT           "X:",65534,376,83,10,8
-    LTEXT           "Y:",65533,404,83,10,8
-    LTEXT           "PC:",65532,349,65,13,8
-    EDITTEXT        IDC_DEBUGGER_VAL_A,357,81,15,12,ES_UPPERCASE | ES_WANTRETURN
-    EDITTEXT        IDC_DEBUGGER_VAL_X,385,81,15,12,ES_UPPERCASE | ES_WANTRETURN
-    EDITTEXT        IDC_DEBUGGER_VAL_Y,412,81,15,12,ES_UPPERCASE | ES_WANTRETURN
-    EDITTEXT        IDC_DEBUGGER_VAL_PC,361,63,25,12,ES_UPPERCASE | ES_WANTRETURN
-    GROUPBOX        "Stack",IDC_DEBUGGER_VAL_S,349,99,79,78,WS_TABSTOP
-    EDITTEXT        IDC_DEBUGGER_STACK_CONTENTS,354,110,69,62,ES_MULTILINE | ES_UPPERCASE | ES_READONLY
-    PUSHBUTTON      "Seek PC",IDC_DEBUGGER_SEEK_PC,389,62,38,14
-    PUSHBUTTON      "Seek To:",IDC_DEBUGGER_SEEK_TO,349,43,37,14
-    EDITTEXT        IDC_DEBUGGER_VAL_PCSEEK,389,44,38,12,ES_UPPERCASE | ES_WANTRETURN
-    LTEXT           "PPU:",65531,349,183,19,10
-    LTEXT           "Sprite:",65530,395,183,21,10
-    EDITTEXT        IDC_DEBUGGER_VAL_PPU,367,182,25,12,ES_UPPERCASE | ES_WANTRETURN
-    EDITTEXT        IDC_DEBUGGER_VAL_SPR,417,182,15,12,ES_UPPERCASE | ES_WANTRETURN
-    LTEXT           "Scanline:",IDC_DEBUGGER_VAL_SLINE,435,183,50,10
-    CONTROL         "",IDC_DEBUGGER_ADDR_LINE,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,5,295,328,10
+    LTEXT           "A:",IDC_STATIC,349,96,10,8
+    LTEXT           "X:",65534,376,96,10,8
+    LTEXT           "Y:",65533,404,96,10,8
+    LTEXT           "PC:",65532,349,78,13,8
+    EDITTEXT        IDC_DEBUGGER_VAL_A,357,94,15,12,ES_UPPERCASE | ES_WANTRETURN
+    EDITTEXT        IDC_DEBUGGER_VAL_X,385,94,15,12,ES_UPPERCASE | ES_WANTRETURN
+    EDITTEXT        IDC_DEBUGGER_VAL_Y,412,94,15,12,ES_UPPERCASE | ES_WANTRETURN
+    EDITTEXT        IDC_DEBUGGER_VAL_PC,361,76,25,12,ES_UPPERCASE | ES_WANTRETURN
+    GROUPBOX        "Stack",IDC_DEBUGGER_VAL_S,349,112,79,78,WS_TABSTOP
+    EDITTEXT        IDC_DEBUGGER_STACK_CONTENTS,354,123,69,62,ES_MULTILINE | ES_UPPERCASE | ES_READONLY
+    PUSHBUTTON      "Seek PC",IDC_DEBUGGER_SEEK_PC,389,75,38,14
+    PUSHBUTTON      "Seek To:",IDC_DEBUGGER_SEEK_TO,349,56,37,14
+    EDITTEXT        IDC_DEBUGGER_VAL_PCSEEK,389,57,38,12,ES_UPPERCASE | ES_WANTRETURN
+    LTEXT           "PPU:",65531,349,196,19,10
+    LTEXT           "Sprite:",65530,395,196,21,10
+    EDITTEXT        IDC_DEBUGGER_VAL_PPU,367,195,25,12,ES_UPPERCASE | ES_WANTRETURN
+    EDITTEXT        IDC_DEBUGGER_VAL_SPR,417,195,15,12,ES_UPPERCASE | ES_WANTRETURN
+    LTEXT           "Scanline:",IDC_DEBUGGER_VAL_SLINE,435,196,97,10
+    CONTROL         "",IDC_DEBUGGER_ADDR_LINE,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,5,307,328,10
     CONTROL         "Break on Bad Opcode",IDC_DEBUGGER_BREAK_ON_BAD_OP,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,437,118,90,10
-    CONTROL         "Symbolic debugging",IDC_DEBUGGER_ENABLE_SYMBOLIC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,347,200,79,10
-    PUSHBUTTON      "Reload Symbols",IDC_DEBUGGER_RELOAD_SYMS,427,198,55,14
-    GROUPBOX        "Bookmarks",45535,348,214,119,80
-    LISTBOX         LIST_DEBUGGER_BOOKMARKS,351,223,67,66,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_DEBUGGER_BOOKMARK,421,223,40,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "Add",IDC_DEBUGGER_BOOKMARK_ADD,421,239,40,14
-    PUSHBUTTON      "Delete",IDC_DEBUGGER_BOOKMARK_DEL,421,255,40,14
-    PUSHBUTTON      "Rom Patcher",IDC_DEBUGGER_ROM_PATCHER,487,198,46,14
-    CONTROL         "",IDC_DEBUGGER_ICONTRAY,"Static",SS_BLACKFRAME,5,7,10,287
-    PUSHBUTTON      "",IDC_DEBUGGER_RESTORESIZE,348,296,9,7
-    LTEXT           "Restore original window size",IDC_STATIC,359,295,90,8
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,437,132,90,10
+    CONTROL         "Symbolic debugging",IDC_DEBUGGER_ENABLE_SYMBOLIC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,347,213,79,10
+    PUSHBUTTON      "Reload Symbols",IDC_DEBUGGER_RELOAD_SYMS,427,211,55,14
+    GROUPBOX        "Bookmarks",45535,348,227,119,80
+    LISTBOX         LIST_DEBUGGER_BOOKMARKS,351,236,67,66,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_DEBUGGER_BOOKMARK,421,236,40,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Add",IDC_DEBUGGER_BOOKMARK_ADD,421,252,40,14
+    PUSHBUTTON      "Delete",IDC_DEBUGGER_BOOKMARK_DEL,421,268,40,14
+    PUSHBUTTON      "Rom Patcher",IDC_DEBUGGER_ROM_PATCHER,487,211,46,14
+    CONTROL         "",IDC_DEBUGGER_ICONTRAY,"Static",SS_BLACKFRAME,5,6,10,301
+    PUSHBUTTON      "",IDC_DEBUGGER_RESTORESIZE,348,308,9,7
+    LTEXT           "Restore original window size",IDC_STATIC,359,308,90,8
+    PUSHBUTTON      "Run Line",IDC_DEBUGGER_RUN_LINE,349,39,37,14
+    PUSHBUTTON      "128 Lines",IDC_DEBUGGER_RUN_FRAME2,389,39,37,14
 END
 
 TRACER DIALOGEX 65527, 65513, 398, 319
@@ -1564,6 +1566,7 @@ BEGIN
     "DEBUGGER", DIALOG
     BEGIN
         RIGHTMARGIN, 541
+        BOTTOMMARGIN, 318
     END
 
     "ADDBP", DIALOG
